--- a/.github/workflows/omv-ci.yml
+++ b/.github/workflows/omv-ci.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [ 3.7, 3.9 ]
-        engine: [ jNeuroML_validate, jNeuroML_NEURON, jNeuroML_EDEN ]
+        engine: [ jNeuroML_validate, jNeuroML_NEURON, jNeuroML_EDEN, pyNeuroML_validate_sbml ]
 
     steps:
     - uses: actions/checkout@v4
